RESOLVED FIXED71637
[chromium] When GC3DPrivate::initializExtensions fails, dont keep retrying
https://bugs.webkit.org/show_bug.cgi?id=71637
Summary [chromium] When GC3DPrivate::initializExtensions fails, dont keep retrying
Nat Duca
Reported 2011-11-06 14:52:16 PST
[chromium] When GC3DPrivate::initializExtensions fails, dont keep retrying
Attachments
Patch (2.15 KB, patch)
2011-11-06 14:52 PST, Nat Duca
no flags
Nat Duca
Comment 1 2011-11-06 14:52:33 PST
Nat Duca
Comment 2 2011-11-06 14:53:52 PST
While this should never happen, one side effect of the way the initializeExtensions routine is currently implemented is that when the init fails, it will keep hammering on makeCurrent every time it is called. This makes debugging failures that follow difficult.
Kenneth Russell
Comment 3 2011-11-08 17:44:07 PST
Comment on attachment 113804 [details] Patch Looks good to me.
WebKit Review Bot
Comment 4 2011-11-08 20:03:56 PST
Comment on attachment 113804 [details] Patch Clearing flags on attachment: 113804 Committed r99648: <http://trac.webkit.org/changeset/99648>
WebKit Review Bot
Comment 5 2011-11-08 20:04:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.