[chromium] When GC3DPrivate::initializExtensions fails, dont keep retrying https://bugs.webkit.org/show_bug.cgi?id=71637

Reviewed by Kenneth Russell.

* src/GraphicsContext3DChromium.cpp:
(WebCore::GraphicsContext3DPrivate::initializeExtensions):


Canonical link: https://commits.webkit.org/88215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99648 268f45cc-cd09-0410-ab3c-d52691b4dbfc